# DCS

./: .gitignore  README.md  deploy_docker.sh  docker.sh  docki.yaml  env.bat  env.sh  jupyter.sh  log.txt  optuna.sh  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-package-test.yml
data_text_2_image/: download.py  requiements.txt  test.ipynb  unclip.py
environment/: base-packages.sh  build_docker.sh  dockerfile.cpu  dockerfile.gpu  requirements.txt  run_in_env.sh  utils.sh
project/: BigGAN.py  StableDiffusion.py  augmentations.py  baseline_model.py  config_baseline.yaml  config_strategy.yaml  config_strategy_hpc.yaml  device_info.py  distence_test.py  eval.ipynb  gan_sampler.py  helloworld.py  metrics.py  neg_loss_generation_guide.py  ood_distence.py  ood_distence_generation_guide.py  ood_distence_neg_loss_generation_guide.py  ood_distence_neg_loss_generation_guide_downstream.py  ops_utils.py  run.py  setup_mysql.py  strategies.py  test.ipynb  train_baseline.py  train_logger.py  unclip.ipynb  utils.py  viz_db.ipynb
project/IT_GAN/: BigGAN.py  ITGAN_Evaluate.py  ITGAN_GANInversion.py  ITGAN_auxiliary.py  ITGAN_main_CIFAR10.py  ITGAN_main_CIFAR100.py  layers.py  readme.txt  utils.py
project/models/: TIMM.py  models.py  timm_models.py
tests/: test_helloworld.py
